# multi-logger-py

./: README.md  pyproject.toml
package/clients/: discord.py
package/emojis/: __init__.py
package/logger/: __init__.py
tests/: test_emoji_map.py
