[project]
name = "multi-logger"
version = "0.1.0"
description = "A flexible logger based on loguru with multiple notification clients (Discord, Telegram)"
readme = "README.md"
license = "MIT"
keywords = [
    "logger",
    "logging",
    "loguru",
    "discord",
    "telegram",
    "notifications",
    "multi-channel",
]
dependencies = ["discord-webhook>=1.4.1", "httpx>=0.28.1", "loguru>=0.7.3"]

[dependency-groups]
dev = ["pytest>=9.0.2", "twine>=6.2.0"]
